safer-gambling-app-chronjob/overlays/test/test-guea/safer-gambling-app-egress-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: safer-gambling-app-to-miscsquid
spec:
  egress:
    - ports:
        - port: 80
          protocol: TCP
      to:
        - ipBlock:
            cidr: 172.16.243.160/32
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - safer-gambling-app
  policyTypes:
    - Egress
